name:               vojiranto-github-io
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base
                  , hakyll
                  , clay
                  , time
                  , text
                  , pandoc
  ghc-options:      -threaded
  default-language: Haskell2010
